[*] fixed DapQmlButton IconMainSub mode link and sub label spacing

--- a/vpn/qml/widgets/dapqml-widgets-asset/brand/RiseVPN/style.css
+++ b/vpn/qml/widgets/dapqml-widgets-asset/brand/RiseVPN/style.css
@@ -471,7 +471,7 @@
 
 .content-mid
 {
-    scaled-rect: scaled(-1,nan,356,nan,false);
+    scaled-rect: scaled(-1,nan,363,nan,false);
 }
 
 .content-background
@@ -818,6 +818,13 @@
     color: "@brand";
     scaled-font: scaled(16);    
     font-weight: Font.Bold;
+}
+
+.sett-btn-lbl-sub-link
+{
+    color: "@light-grey";
+    scaled-font: scaled(16);
+    font-weight: Font.Normal;
 }
 
 .sett-title-lbl-main
